modifies the dao layer to support indexes with child tables
